--- a/style.css
+++ b/style.css
@@ -1,115 +1,70 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    background-color: #FFDAB9;
-}
-@media (min-width: 0px) {
-    .box {
-        width: 70%;
-        margin: 10% auto;
-    }
-}
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* Align items to the left */
-    height: 100%;
-}
 
-.heading {
-    align-self: center;
+html, body {
+height: 100%;
+margin: 0;
+background-color: #FFDAB9;
 }
 
 .box {
-    position: relative;
-    width: 518px;
-    height: 550px;
-    border: 1px solid black;
-    padding: 20px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    box-shadow: 30px 30px 30px black;
-    background-color: white;
-    margin-top: 71px;
-    margin-left: 470px;
+position: relative;
+width: 90%;
+max-width: 518px;
+height: auto;
+border: 1px solid black;
+padding: 20px;
+text-align: left;
+display: flex;
+flex-direction: column;
+border-radius: 20px;
+box-shadow: 30px 30px 30px black;
+background-color: white;
+margin: 10% auto;
 }
 
 h1 {
-    align-self: center;
-    font-size: 35px;
+align-self: center;
+font-size: 35px;
 }
 
 input {
-    border: none;
-    border-bottom: 4px solid #033303;
-    outline: none;
-    background-color: transparent;
-    font-size: 25px;
-    margin-top: -10px;
+border: none;
+border-bottom: 4px solid #033303;
+outline: none;
+background-color: transparent;
+font-size: 25px;
+margin-top: -10px;
+padding: 5px;
 }
 
 button {
-    margin-top: 15px;
-    width: 130px;
-    height: 40px;
-    align-self: center;
-    background-color: rgb(52, 52, 247);
-    color: white;
-    font-size: 25px;
-    border-radius: 10px;
+margin-top: 15px;
+width: 130px;
+height: 40px;
+align-self: center;
+background-color: rgb(52, 52, 247);
+color: white;
+font-size: 25px;
+border-radius: 10px;
 }
 
 button:hover {
-    background-color: rgb(69, 69, 177);
+background-color: rgb(69, 69, 177);
 }
 
 #result {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: rgb(242, 238, 238);
-    width: 100%;
-    height: 100%;
-    margin: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+background-color: rgb(242, 238, 238);
+width: 100%;
+height: 100%;
+margin: 0;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+@media (min-width: 0px) {
+.box {
+    width: 60%;
+    margin: 10% auto;
 }
-
-.modal-content {
-    background-color: white;
-    margin: 20% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 10px;
 }
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
